--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: "Segoe UI", SegoeUI, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    overscroll-behavior-y: none;
 }
 
 body {
